[#44] Fix: 일정 추가 페이지 최대 높이 지정. overflow-y 설정

--- a/pages/calendar/create/create.module.scss
+++ b/pages/calendar/create/create.module.scss
@@ -3,6 +3,9 @@
   position: relative;
   font-family: 'LaundryGothic';
   color: var(--text-color-gray);
+  height: 100vh;
+  overflow-y: scroll;
+  scrollbar-width: none;
 }
 
 .title {
